--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-tabs": "^6.0.2",
     "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
