--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-router": "^5.1.20",
     "@vitejs/plugin-react-swc": "^3.4.0",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-step-progress-bar": "^1.0.3",
     "react-tabs": "^6.0.2",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
