--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "antd": "^5.9.4",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.7.1",
     "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^6.3.0",
@@ -26,6 +28,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-slider": "^2.0.6",
     "react-step-progress-bar": "^1.0.3",
     "react-tabs": "^6.0.2",
     "redux": "^4.2.1",
