--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-slick": "^0.29.0",
     "react-step-progress-bar": "^1.0.3",
     "react-tabs": "^6.0.2",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.0",
