--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@ericz1803/react-google-calendar": "^4.3.1",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
     "@reduxjs/toolkit": "^1.9.7",
@@ -25,6 +26,7 @@
     "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -36,6 +38,7 @@
     "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "rrule": "^2.8.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.0",
     "vite": "^4.5.0",
