--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-react-swc": "^3.4.0",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.3.2",
     "date-fns": "^3.0.5",
     "dotenv": "^16.3.1",
