--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
     "react-step-progress-bar": "^1.0.3",
@@ -41,10 +42,12 @@
     "rrule": "^2.8.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.0",
+    "tailwind-datepicker-react": "^1.4.3",
     "vite": "^4.5.0",
     "vite-plugin-svgr": "^4.1.0",
     "vite-tsconfig-paths": "^4.2.1",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "zustand": "^4.4.6"
   },
   "scripts": {
