--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-router": "^5.1.20",
     "@vitejs/plugin-react-swc": "^3.4.0",
+    "agora-rtc-sdk-ng": "^4.20.0",
+    "agora-rtm-sdk": "^1.4.5-229",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
