--- a/.env
+++ b/.env
@@ -9,12 +9,12 @@ VITE_FIREBASE_MSG_SENDER_ID=402432922814
 VITE_FIREBASE_APP_ID=1:402432922814:web:66d46f50250f8ed07a7aef
 VITE_FIREBASE_FCM_ = BKup018WIF7LMbcpFdb6JJdJl3LJ239CtpirQBgw-tYFbB6s6htHtCRBv2u_j0MlAVw5wq9PRWNkuMlnm5f7tSQ
 
-  "Vnpay": {
-    "TmnCode": "PM5OJ7TD",
-    "HashSecret": "LROTTBJLPUTZGHLTOJESRJLOVLAENGKO",
-    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "Command": "pay",
-    "CurrCode": "VND",
-    "Version": "2.1.0",
-    "Locale": "vn"
-  }
+  # "Vnpay": {
+  #   "TmnCode": "PM5OJ7TD",
+  #   "HashSecret": "LROTTBJLPUTZGHLTOJESRJLOVLAENGKO",
+  #   "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+  #   "Command": "pay",
+  #   "CurrCode": "VND",
+  #   "Version": "2.1.0",
+  #   "Locale": "vn"
+  # }
