--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.0",
     "tailwind-datepicker-react": "^1.4.3",
+    "uuid": "^9.0.1",
     "vite": "^4.5.0",
     "vite-plugin-svgr": "^4.1.0",
     "vite-tsconfig-paths": "^4.2.1",
