--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-loading": "^2.0.3",
     "react-number-format": "^5.3.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
