--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.2",
     "date-fns": "^3.0.5",
     "dotenv": "^16.3.1",
+    "file-saver": "^2.0.5",
     "firebase": "^10.7.1",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
